--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -4,7 +4,7 @@
 </ul>
 <% end%>
 
-<%= form_for @item do |f| %>
+<%= form_for session[:cart] do |f| %>
 <%= f.text_field :name %>
 <%= f.submit "Add Item" %>
 <% end %>
