Automatically backed up by Learn

--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,8 +1,8 @@
-<% session[:cart].each do |item|%>
+
 <ul>
-  <li><%= item %> </li>
+  <li><%= session[:cart] %> </li>
 </ul>
-<% end%>
+
 
 <%= form_for @item do |f| %>
 <%= f.text_field :name %>
