--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -5,6 +5,6 @@
 
 
 <%= form_for '/add' do |f| %>
-<%= f.text_field [:product] %>
+<%= f.text_field :product %>
 <%= f.submit "Add Item" %>
 <% end %>
