Automatically backed up by Learn

--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -5,6 +5,7 @@
 
 
 <%= form_for '/add' do |f| %>
-<%= f.text_field :product %>
-<%= f.submit %>
+  <%= f.label :product %>:
+  <%= f.text_field :product %>
+  <%= f.submit %>
 <% end %>
