Automatically backed up by Learn

--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -6,6 +6,6 @@
 
 <%= form_for '/add' do |f| %>
   <%= f.label :product %>:
-  <%= f.text_field 'product', id: 'product' %>
+  <%= f.text_field :product, id: 'product' %>
   <%= f.submit %>
 <% end %>
