Automatically backed up by Learn

--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -7,5 +7,5 @@
 <%= form_for '/add' do |f| %>
   <%= f.label :product %>:
   <%= f.text_field :product, id: 'product' %>
-  <%= f.submit %>
+  <%= f.submit 'add to cart' %>
 <% end %>
