--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -4,7 +4,7 @@
 </ul>
 
 
-<%= form_for 'add', :url => add_path do |f| %>
+<%= form_for 'product', :url => add_path do |f| %>
   <%= f.label :product %>:
   <%= f.text_field :product, id: 'product' %>
   <%= f.submit 'add to cart' %>
